# fiaas-deploy-daemon

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .sch-bots.yml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  TODO.md  __init__.py  build.gradle  fiaas.yml  finnbuild.json  helm-values.yaml  pyproject.toml  pytest.ini  release-notes.md.tpl  requirements.txt  setup.cfg  setup.py  start_kubernetes_cluster.sh  tox.ini
.github/: CODEOWNERS  settings.yml
.github/workflows/: codeql-analysis.yml
.semaphore/: docker.yml  latest.yml  make-release.yml  push-container-image.yml  semaphore.yml  stable.yml
docs/: architecture.md  developing.md  fiaas.md  how_to_work_on_fiaas_apps.md  operator_guide.md  platform_contract.md  roadmap.md  schema.json  v2_spec.md  v3_spec.md  v3_whats_new.md
docs/design/: architecture.md  log_routing.md  overview.md
docs/tpr/: PaasbetaApplication.yaml
fiaas_deploy_daemon/: __init__.py  base_thread.py  config.py  extension_hook_caller.py  lifecycle.py  log_extras.py  logsetup.py  retry.py  secrets.py  tools.py
fiaas_deploy_daemon/bootstrap/: __init__.py  bootstrapper.py
fiaas_deploy_daemon/crd/: __init__.py  apiextensionsv1_crd_bootstrap.py  apiextensionsv1_crd_watcher.py  apiextensionsv1beta1_crd_bootstrap.py  crd_resources_syncer_apiextensionsv1.py  crd_resources_syncer_apiextensionsv1beta1.py  status.py  types.py  watcher.py
fiaas_deploy_daemon/deployer/: __init__.py  bookkeeper.py  deploy.py  gke.py  kubernetes.py  scheduler.py  version_exporter.py
fiaas_deploy_daemon/fake_consumer/: __init__.py  fake_consumer.py
fiaas_deploy_daemon/pipeline/: __init__.py  consumer.py  reporter.py
fiaas_deploy_daemon/specs/: __init__.py  app_config_downloader.py  default.py  defaults.yml  factory.py  lookup.py  models.py
fiaas_deploy_daemon/tpr/: __init__.py  paasbetaapplication.py  status.py  types.py  watcher.py
fiaas_deploy_daemon/tracking/: __init__.py  transformer.py  usage_reporter.py
fiaas_deploy_daemon/usage/: __init__.py  dev_hose_auth.py  usage_reporter.py
fiaas_deploy_daemon/usage_reporting/: __init__.py  dev_hose_auth.py  transformer.py  usage_reporter.py
fiaas_deploy_daemon/web/: __init__.py  forms.py  platform_collector.py  (+1 more)
gradle/: idea.gradle  python.gradle
k8s/: __init__.py  base.py  client.py  config.py  fields.py
minikube/: __init__.py  installer.py  minikube.py
tests/: conftest.py
tpr/: PaasbetaApplication.yaml
utils/: cleanup.py  functions.bash
(+361 files in other folders)
