[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools_scm", # required to include data files (defaults.yml and the html templates) in the python packages
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]
namespaces = false # only consider directories with __init__.py as packages (old setuptools setup.py behaviour)

[project]
name = "fiaas-deploy-daemon"
version = "1.0.dev"
authors = [
    {email = "fiaas@googlegroups.com"},
]
description = "Deploy applications to Kubernetes"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.12"
dependencies = [
    "ConfigArgParse == 0.14.0",
    "prometheus_client == 0.7.1",
    "PyYAML == 6.0.2",
    "pyaml == 19.4.1",
    "pinject == 0.14.1",
    "decorator < 5.0.0",  # 5.0.0 and later drops py2 support (transitive dep from pinject)
    "six >= 1.12.0",
    "k8s == 0.28.0",
    "appdirs == 1.4.3",
    "requests-toolbelt == 0.10.1",
    "backoff == 1.8.0",
    "py27hash == 1.1.0",
     "Flask == 3.0.0",
    "flask-talisman >= 1.1.0",
    "jinja2 >= 3.0.1",
    "markupsafe >= 2.1.3",
    "itsdangerous >= 2.1.2",
    "werkzeug >= 3.0.1",
    "blinker >= 1.7.0",
    "urllib3 == 1.26.19",
    "requests == 2.32.3",
]

[project.optional-dependencies]
# Tooling for development and running tests
dev = [
    "flake8-print == 3.1.4",
    "flake8-comprehensions == 1.4.1",
    "pep8-naming == 0.11.1",
    "flake8 == 7.0.0",
    "pytest-xdist == 3.6.1",
    "pytest-sugar == 1.0.0",
    "pytest-html == 4.1.1",
    "pytest-cov == 5.0.0",
    "pytest-helpers-namespace == 2021.12.29",
    "pytest == 8.2.0",
    "requests-file == 1.4.3",
    "callee == 0.3.1",
]
# CI builds use tox to run tests; tox will install the rest of the dependencies in its own virtualenvs
ci = [
    "tox==4.14.2",
    "virtualenv==20.26.0",
    "black ~= 22.0",
]

[project.scripts]
fiaas-deploy-daemon = "fiaas_deploy_daemon:main"
fiaas-deploy-daemon-bootstrap = "fiaas_deploy_daemon.bootstrap:main"

[tool.black]
line-length = 120

[tool.coverage.html]
directory = "build/reports/coverage"

[tool.coverage.xml]
output = "build/reports/coverage.xml"

[tool.pytest.ini_options]
markers = [
        "integration_test: integration/e2e tests which spin up a kind Kubernetes cluster. Requires docker.  (deselect with '-m \"not integration_test\"')",
]
